delays running of problem scripts until page ready

--- a/app/assets/javascripts/support/input-placeholder.js.erb
+++ b/app/assets/javascripts/support/input-placeholder.js.erb
@@ -3,7 +3,9 @@ Modernizr.load([
     test: Modernizr.input.placeholder,
     nope: ['<%= asset_path "jquery-placeholder/jquery.placeholder.js" %>'],
     callback: function () {
-      $('input, textarea').placeholder();
+      $(function() {
+        $('input, textarea').placeholder();
+      });
     }
   }
 ]);
