--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -13,10 +13,10 @@
     Style Guide -> Abstractions -> Box
 */
 
-.box {
-  background-color: #fff;
-  box-shadow: 0 1px 2px rgba(#000, 0.25);
-}
+.box {@include box;}
+
+/* Heavy */
+.box--heavy {@include box-heavy;}
 
 /* Torn paper treatment */
 .box--torn {
