--- a/app/assets/stylesheets/partials/utils/_mixins.scss
+++ b/app/assets/stylesheets/partials/utils/_mixins.scss
@@ -965,10 +965,23 @@
 /* Clear fix */
 @mixin clear-fix {
 	&:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+/* --Box-- */
+
+/* Default */
+@mixin box {
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(#000, 0.25);
+}
+
+/* Heavy */
+@mixin box-heavy {
+  box-shadow: 0 0 7px rgba(#000, 0.3);
 }
 
 /* --Hide-- */
