Added angular app to the body. No adverse effects for pages that aren't using angular

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 
 </head>
 
-<body class="<%= params[:controller] %> <%= params[:action] %> <%= yield :class_for_body %>">
+<body ng-app="Westfield" class="<%= params[:controller] %> <%= params[:action] %> <%= yield :class_for_body %>">
 
 	<!-- Skip link -->
 	<a href="#main" class="hide-visually skip-link">Skip to main content</a>
