--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -174,6 +174,14 @@
 /* Arrow opposites */
 .icon--arrow-opposites:before {content: "\e007";}
 
+/* Ellipses */
+.icon-ellipsis-horizontal:before {
+    content: "\f141";
+}
+.icon-ellipsis-vertical:before {
+    content: "\f142";
+}
+
 /* --Extenders-- */
 
 /* Apply some spacing between the icon element and adjacent text */
