Added nav contextual layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,7 @@ Global stylesheet
 @import "partials/layout/header";
 @import "partials/layout/main";
 @import "partials/layout/footer";
+@import "partials/layout/nav-contextual";
 
   /* Layout -> Grid */
   @import "partials/layout/grid/grid";
