--- a/app/assets/stylesheets/partials/layout/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/layout/_nav-contextual.scss
@@ -2,24 +2,84 @@
   Contextual navigation
 */
 .nav-contextual {
-  @include to-rem(padding-top padding-bottom, $spacing-half);
+  position: relative;
   background-color: $color-med-txt;
 
-
-  a:hover {color:#fff;}
-}
-
-.nav-contextual__top-level-items {
-  overflow: hidden;
-  -webkit-overflow-scrolling: touch;
-}
-
-  .nav-contextual__top-level-items > li a {
+  @include respond-min($non-palm) {
     @include to-rem(padding-top padding-bottom, $spacing-half);
   }
 
-.nav-contextual__centre-selector {
+  a:hover {color:#fff;}
 
+  /* Scroll the contents of the navigation when the viewport is narrow enough */
+  nav {
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+
+    @include respond-min($palm) {overflow: hidden;}
+  }
+}
+
+/* Clip scrollable contents (palm) */
+.nav-contextual__clip {
+  position: relative;
+
+  @include to-rem(margin-right padding-right, $spacing-base +  $spacing-base);
+}
+
+/* Holds menus items and sets container to be wide-enough that they are horiz aligned */
+.nav-contextual__main-items {
+  width: 250%; /* magic number */
+
+  > li {@include to-rem(margin-right, $spacing-base);}
+
+  // Temporary
+  .nav-contextual__sub-items {display: none;}
+}
+
+  .nav-contextual__main-items > li a {
+    @include to-rem(padding-top padding-bottom, $spacing-half);
+
+    border-bottom: 2px solid transparent;
+
+    &.is-active {
+      color: #fff;
+      border-bottom-color: $color-brand;
+    }
+  }
+
+  .nav-contextual__show-more {
+    @include respond-min($palm) {display: none;}
+
+    position: absolute;
+    @include to-rem(top, 7); // half height
+    @include to-rem(padding-left, $spacing-base);
+    right: 0;
+    color: $color-light-txt;
+    @include linear-gradient(#f63, #ff6, top left, top right);
+    background: -webkit-linear-gradient(left, rgba($color-med-txt, 0) 0%, rgba($color-med-txt, 1) 100%);
+  }
+
+.nav-contextual__centre-selector {
+  @include respond-max($palm) {border-top: 1px solid $color-light-txt;}
+
+  button {
+    position: absolute;
+    @include to-rem(top, $spacing-third);
+    @include to-rem(right, $spacing-half);
+  }
+
+  @include respond-max($palm) {
+    .nav-contextual__centre-selector-control {display:none;}
+  }
+}
+
+.nav-contextual__centre-selector-control {
+  @include font-size($font-size-sml);
+  @include to-rem(padding-top padding-bottom, $spacing-third);
+  color: $color-light-txt;
+
+  label {@include to-rem(margin-right, $spacing-base);}
 }
 
 .nav-contextual__centre-selector__group {
