--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,108 +1,260 @@
-<h1 class="hide-visually">Products</h1>
+<% content_for :nav_contextual do %>
+  <%= render '/layouts/nav_contextual' %>
+<% end %>
 
-<nav id="facets">
-  <%- %w(super_cat category sub_category type).each do |category| -%>
-    <%= render partial: 'products/facets/list', locals: {facet: @search.facets.send(category), title: 'Category'} if @search.facets.send(category) %>
-  <%- end -%>
-  <%= render partial: 'products/facets/filtered_list', locals: {facet: @search.facets.retailer} if @search.facets.retailer %>
-  <%= render partial: 'products/facets/filtered_list', locals: {facet: @search.facets.brand} if @search.facets.brand %>
-  <%= render partial: 'products/facets/list', locals: {facet: @search.facets.colour, title: "Colours"} if @search.facets.colour %>
-  <%= render partial: 'products/facets/price', locals: {facet: @search.facets.price} if @search.facets.price %>
-  <%= render partial: 'products/facets/summary', locals: {applied_filters: @search.applied_filters} if @search.applied_filters %>
-
-  <span class='sort_options'>
-    Sort by: <%= products_sort_tag @search.sort_options %>
-  </span>
-</nav>
-
-<div id="pin-board" class="pin-board">
-  <%- @search.products.each_slice(4) do |group| -%>
-    <%- group.each do |product| -%>
-      <div class="tile products isotope-item" data-url="">
-        <%= link_to centre_product_path centre_id: params[:centre_id], retailer_code: product.retailer_code, sku: product.sku do %>
-          <%= image_tag product.default_image_url %>
-          <div class="title">
-            <p class="name">
-              <%=  product.lozenge_name %><br>
-              <small>
-                <span>from</span> <%= product.retail_chain_name %>
-                <%= price_tag(product) %>
-              </small>
-            </p>
-          </div>
-        <%- end -%>
-      </div>
-    <%- end -%>
-  <%- end -%>
+<!-- Used to list 'super_cat' and 'category' -->
+<script type="text/ng-template" id="categoryItemTemplate">
+  <div class="drop-down-menu__hdr">
+    <em>{{search.categories.title}}</em>
+    <div ng-include src="'FilterItemBackButton'"></div>
   </div>
-<%= paginate @search %>
+  <ul class="drop-down-menu__list">
+    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+      <button ng-click="filterCategory( search.categories.field, category.code )" class="btn btn--full btn--full-left btn--pointer">
+        {{ category.name }} ({{ category.count }})
 
-<%- content_for :javascript do -%>
-  <script type='text/javascript'>
-    (function($) {
-      $.expr[':'].startsWith = $.expr.createPseudo(function(str) {
-        return function(elem) {
-          return jQuery(elem).text().replace(/[^a-zA-Z0-9]/g,'').toUpperCase().indexOf(str.replace(/[^a-zA-Z0-9]/g,'').toUpperCase()) == 0;
-        };
-      });
-      var decode = function(str) {
-        return decodeURIComponent(str.replace(/\+/g, ' '));
-      };
-      $.parseParams = function(query) {
-        var re = /([^&=]+)=?([^&]*)/g;
-        var params = {}, e;
-        if (query) {
-          if (query.substr(0, 1) == '?') {
-            query = query.substr(1);
-          }
+        <span class="btn--pointer__icon icon icon--arrow-right-big icon--lrg icon--flush-top" aria-hidden="true"></span>
+      </button>
+    </li>
+  </ul>
+</script>
 
-          while (e = re.exec(query)) {
-            var k = decode(e[1]);
-            var v = decode(e[2]);
-            if (params[k] !== undefined) {
-              if (!$.isArray(params[k])) {
-                params[k] = [params[k]];
-              }
-              params[k].push(v);
-            } else {
-              params[k] = v;
-            }
-          }
-        }
-        return params;
-      };
-      function changeParams(params) {
-        var queryParameters = $.parseParams(window.location.search);
-        location.search = $.param($.extend(true, {}, queryParameters, params),false).replace(/%2B/g,"+");
-      }
-      $('.facet li[data-facet-link], #applied_filters-list span[data-facet-link]').click(function(event) {
-        window.location = $(event.target).attr('data-facet-link');
-      });
-      $('#sort').change(function(event) {
-        window.location = $("#sort option[value='"+$('#sort').val()+"']").attr('data-sort-link')
-      });
-      $("#price-facet-slider").slider({
-        range: true, min: 0, max: <%= @search.facets.price[:max] %>,
-        values: [<%= params[:price] ? params[:price].split("-").join(", ") : [0, @search.facets.price[:max]].join(", ") %>],
-        slide: function(event, ui) {
-          $('.facet-price .price-low').text(ui.values[0]+'.00');
-          $('.facet-price .price-high').text(ui.values[1]+'.00');
-        },
-        change: function(event, ui) {
-          changeParams({price: ui.values[0] + '-' + ui.values[1]});
-        }
-      });
-      $("input.facet-filter").keyup(function(event) {
-        var field = $(event.target);
-        if (field.val() == '')
-          field.siblings("div").find('li').show();
-        else {
-          field.siblings("div").find("li:startsWith(" + field.val() + ")").show();
-          field.siblings("div").find("li:not(:startsWith(" + field.val() + "))").hide();
-        }
-        field.parent().tinyscrollbar_update();
-      });
-      $(".facet-filtered").tinyscrollbar();
-    })(jQuery);
-  </script>
-<%- end -%>
+<script type="text/ng-template" id="SubCategoryTemplate">
+  <div class="drop-down-menu__hdr">
+    <em>{{search.categories.title}}</em>
+    <div ng-include src="'FilterItemBackButton'"></div>
+  </div>
+
+  <ul class="drop-down-menu__list">
+    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+      <label for="category_{{ category.code }}">
+        <input ng-model="category.selected" ng-checked="category.selected" value="{{ category.code }}" id="category_{{ category.code }}" type="checkbox">
+        {{ category.name }} ({{ category.count }})
+      </label>
+    </li>
+  </ul>
+
+  <button ng-click="mvFilterSearch( 'categories' )" class="btn btn--main btn--sml filters__apply">Apply</button>
+</script>
+
+<script type="text/ng-template" id="FilterItemBackButton">
+  <button class="btn">
+    <span class="hide-fully--non-palm icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
+    <span class="hide-visually">Back</span>
+  </button>
+</script>
+
+<div ng-controller="ProductBrowseController" class="filters drop-down-menu">
+  <button toggle-visibility="filters" class="drop-down-menu__trigger drop-down-menu__trigger--light btn btn--main btn--pointer hide-fully--non-palm">
+    Filter
+    <span class="icon icon--lrg icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
+  </button>
+
+  <div id="filters" class="drop-down-menu__target box">
+    <ul class="filters__list">
+      <!-- Categories -->
+      <li>
+        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.categories.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+        <div ng-switch on="search.categories.field">
+          <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
+          <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
+          <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
+        </div>
+      </li>
+
+      <!-- Retailers -->
+      <li ng-if="filterIsAvailable('retailer')">
+        <button class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.retailers.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+
+        <div class="drop-down-menu__banner">
+          <div class="drop-down-menu__hdr">
+            <em>{{ search.retailers.title }}</em>
+            <div ng-include src="'FilterItemBackButton'"></div>
+          </div>
+
+          <div class="filters__search">
+            <input ng-model="storeSearch" class="filters__input-txt" type="search" placeholder="Enter a store name">
+          </div>
+        </div>
+
+        <ul class="drop-down-menu__list">
+          <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
+            <label for="retailer_{{ retailer.code }}">
+              <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox">
+
+              {{ retailer.name }} ({{ retailer.count }})
+            </label>
+          </li>
+        </ul>
+
+        <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main filters__apply">Apply</button>
+      </li>
+
+      <!-- Brands -->
+      <li ng-if="filterIsAvailable('brand')">
+        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.brands.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+
+        <div class="drop-down-menu__banner">
+          <div class="drop-down-menu__hdr">
+            <em>{{ search.brands.title }}</em>
+            <div ng-include src="'FilterItemBackButton'"></div>
+          </div>
+
+          <div class="filters__search">
+            <input ng-model="brandSearch" class="filters__input-txt" type="search" placeholder="Enter a brand name">
+          </div>
+        </div>
+
+        <ul class="drop-down-menu__list">
+          <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
+            <label for="brand_{{ brand.code }}">
+              <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox">
+
+              {{ brand.name }} ({{ brand.count }})</label>
+          </li>
+        </ul>
+
+        <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main filters__apply">Apply</button>
+      </li>
+
+      <!-- Colour -->
+      <li ng-if="filterIsAvailable('colour')">
+        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.colours.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+
+        <div class="drop-down-menu__banner">
+          <div class="drop-down-menu__hdr">
+            <em>{{ search.colours.title }}</em>
+            <div ng-include src="'FilterItemBackButton'"></div>
+          </div>
+        </div>
+
+        <ul class="drop-down-menu__list">
+          <li ng-repeat="colour in search.colours.values">
+            <label for="colour_{{ colour.code }}">
+              <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox">
+
+              {{ colour.name }} ({{ colour.count }})
+            </label>
+          </li>
+        </ul>
+
+        <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main filters__apply">Apply</button>
+      </li>
+
+      <!-- Size -->
+      <li ng-if="filterIsAvailable('size')">
+        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.sizes.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+
+        <div class="drop-down-menu__banner">
+          <div class="drop-down-menu__hdr">
+            <em>{{ search.sizes.title }}</em>
+            <div ng-include src="'FilterItemBackButton'"></div>
+          </div>
+        </div>
+
+        <ul class="drop-down-menu__list">
+          <li ng-repeat="size in search.sizes.values">
+            <label for="size_{{ size.code }}">
+              <input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
+
+              {{ size.name }} ({{ size.count }})
+            </label>
+          </li>
+        </ul>
+
+        <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main filters__apply">Apply</button>
+      </li>
+
+      <!-- Price -->
+      <li ng-if="filterIsAvailable('price')">
+        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+          {{ search.price.title }}
+          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+        </button>
+
+        <div class="filters__range">
+          <div class="filters__banner drop-down-menu__banner">
+            <div class="drop-down-menu__hdr">
+              <em>{{ search.price.title }}</em>
+              <div ng-include src="'FilterItemBackButton'"></div>
+            </div>
+          </div>
+
+          <div class="filters__range__inner">
+            <label class="hide-visually" for="price_range_start">Price range start</label>
+            <input ng-model="search.price.values.range_start" ng-change="rangeFilter('price')" class="filters__input-txt" id="price_range_start" type="number">
+
+            <span>to</span>
+
+            <label class="hide-visually" for="price_range_end">Price range end</label>
+            <input ng-model="search.price.values.range_end" ng-change="rangeFilter('price')" class="filters__input-txt" id="price_range_end" type="number">
+          </div>
+
+          <!-- SLIDER -->
+        </div>
+      </li>
+
+      <!-- On sale -->
+      <li>
+        <div class="drop-down-menu__hdr filters__sale">
+          <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items" type="checkbox">
+          <label for="sale-items">On sale</label>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+  <div class="filters__sort-options">
+    <label>
+      <span class="hide-visually">Sort product results by</span>
+      <select ng-model="sort"
+              ng-change="filterSearch('sort')"
+              ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"
+              class="sort-options">
+      </select>
+    </label>
+  </div>
+
+  <div ng-if="hasActiveFilters()" class="tags divider divider--sml">
+    <ul class="horiz-list">
+      <li ng-repeat="filter in search.appliedFilters">
+        <button ng-click="removeSelectedFilter( filter.type, filter.value )" class="btn">
+          {{ filter.title }}
+          <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
+          <span class="hide-visually">Close</span>
+        </button>
+      </li>
+      <li><button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</button></li>
+    </ul>
+  </div>
+</div>
+
+<div ng-controller="ProductsController" class="product-results">
+  <div ng-hide="products.loaded">
+    <span class="preloader preloader--light">
+      <span class="preloader__spinner"></span>
+      <em class="hide-visually">Loading, please wait&#8230;</em>
+    </span>
+  </div>
+
+  <div ng-show="products.loaded" ng-bind-html-unsafe="products.list"></div>
+  <%# Using a !products.loaded on ng-hide so that the loader will be shown immediately %>
+  <div ng-hide="!products.loaded" ng-if="!products.list.length">
+    <%= render 'products' %>
+  </div>
+</div>
