Removed canned search && centre selector (Can be re-added when thew features are played)

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :nav_contextual do %>
-  <%= render '/layouts/nav_contextual' %>
+  <%# render '/layouts/nav_contextual' %>
 <% end %>
 
 <!-- Used to list 'super_cat' and 'category' -->
