--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -23,17 +23,21 @@
   // Custom rule for drop down
   .drop-down-menu__target {
     padding: 0;
-
     @include respond-max($palm) {display: none;}
+
+    // Override 'box' for desktop breakpoint
+    @include respond-min($non-palm) {
+      background: none;
+      box-shadow: none;
+    }
   }
 
   // Overrides for non-palm filter trigger buttons
-  .filters__trigger {
-    @include respond-min($non-palm) {
-      @extend .drop-down-menu__trigger;
-      @extend .drop-down-menu__trigger--light;
-      @extend .btn--pointer;
-    }
+  .non-palm & .filters__trigger {
+    @extend .btn--main;
+    @extend .btn--main-alt4;
+    @extend .drop-down-menu__trigger;
+    @extend .drop-down-menu__trigger--light;
   }
 }
 
@@ -90,7 +94,6 @@
       @include to-em(padding-left padding-right, $spacing-base);
     }
 
-  .filters__sale label { display: inline }
   .filters__sort-options {
     @include to-rem(padding-top padding-bottom, $spacing-quarter);
     position: absolute;
