--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,14 +38,14 @@
 </script>
 
 <script type="text/ng-template" id="FilterItemBackButton">
-  <button class="btn">
+  <button ng-click="closeFilters()" class="btn">
     <span class="hide-fully--non-palm icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
     <span class="hide-visually">Back</span>
   </button>
 </script>
 
 <div ng-controller="ProductBrowseController" class="filters drop-down-menu">
-  <button toggle-visibility="filters" class="drop-down-menu__trigger drop-down-menu__trigger--light btn btn--main btn--pointer hide-fully--non-palm">
+  <button ng-click="showFilterButtons" toggle-visibility="filters" class="drop-down-menu__trigger btn btn--main btn--main-alt4 btn--pointer hide-fully--non-palm">
     Filter
     <span class="icon icon--lrg icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
   </button>
@@ -54,11 +54,11 @@
     <ul class="filters__list">
       <!-- Categories -->
       <li>
-        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('category', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.categories.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
         </button>
-        <div ng-switch on="search.categories.field">
+        <div ng-show="activeFilter === 'category'" ng-switch on="search.categories.field" class="filters__target">
           <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
           <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
           <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
@@ -67,127 +67,135 @@
 
       <!-- Retailers -->
       <li ng-if="filterIsAvailable('retailer')">
-        <button class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('retailer', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.retailers.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
         </button>
 
-        <div class="drop-down-menu__banner">
-          <div class="drop-down-menu__hdr">
-            <em>{{ search.retailers.title }}</em>
-            <div ng-include src="'FilterItemBackButton'"></div>
+        <div ng-show="activeFilter === 'retailer'" class="filters__target">
+          <div class="drop-down-menu__banner">
+            <div class="drop-down-menu__hdr">
+              <em>{{ search.retailers.title }}</em>
+              <div ng-include src="'FilterItemBackButton'"></div>
+            </div>
+
+            <div class="filters__search">
+              <input ng-model="storeSearch" class="filters__input-txt" type="search" placeholder="Enter a store name">
+            </div>
           </div>
 
-          <div class="filters__search">
-            <input ng-model="storeSearch" class="filters__input-txt" type="search" placeholder="Enter a store name">
-          </div>
+          <ul class="drop-down-menu__list">
+            <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
+              <label for="retailer_{{ retailer.code }}">
+                <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox">
+
+                {{ retailer.name }} ({{ retailer.count }})
+              </label>
+            </li>
+          </ul>
+
+          <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main filters__apply">Apply</button>
         </div>
-
-        <ul class="drop-down-menu__list">
-          <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
-            <label for="retailer_{{ retailer.code }}">
-              <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox">
-
-              {{ retailer.name }} ({{ retailer.count }})
-            </label>
-          </li>
-        </ul>
-
-        <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main filters__apply">Apply</button>
       </li>
 
       <!-- Brands -->
       <li ng-if="filterIsAvailable('brand')">
-        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('brand', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.brands.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
         </button>
 
-        <div class="drop-down-menu__banner">
-          <div class="drop-down-menu__hdr">
-            <em>{{ search.brands.title }}</em>
-            <div ng-include src="'FilterItemBackButton'"></div>
+        <div ng-show="activeFilter === 'brand'" class="filters__target">
+          <div class="drop-down-menu__banner">
+            <div class="drop-down-menu__hdr">
+              <em>{{ search.brands.title }}</em>
+              <div ng-include src="'FilterItemBackButton'"></div>
+            </div>
+
+            <div class="filters__search">
+              <input ng-model="brandSearch" class="filters__input-txt" type="search" placeholder="Enter a brand name">
+            </div>
           </div>
 
-          <div class="filters__search">
-            <input ng-model="brandSearch" class="filters__input-txt" type="search" placeholder="Enter a brand name">
-          </div>
+          <ul class="drop-down-menu__list">
+            <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
+              <label for="brand_{{ brand.code }}">
+                <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox">
+
+                {{ brand.name }} ({{ brand.count }})</label>
+            </li>
+          </ul>
+
+          <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main filters__apply">Apply</button>
         </div>
-
-        <ul class="drop-down-menu__list">
-          <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
-            <label for="brand_{{ brand.code }}">
-              <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox">
-
-              {{ brand.name }} ({{ brand.count }})</label>
-          </li>
-        </ul>
-
-        <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main filters__apply">Apply</button>
       </li>
 
       <!-- Colour -->
       <li ng-if="filterIsAvailable('colour')">
-        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('colour', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.colours.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
         </button>
 
-        <div class="drop-down-menu__banner">
-          <div class="drop-down-menu__hdr">
-            <em>{{ search.colours.title }}</em>
-            <div ng-include src="'FilterItemBackButton'"></div>
+        <div ng-show="activeFilter === 'colour'" class="filters__target">
+          <div class="drop-down-menu__banner">
+            <div class="drop-down-menu__hdr">
+              <em>{{ search.colours.title }}</em>
+              <div ng-include src="'FilterItemBackButton'"></div>
+            </div>
           </div>
+
+          <ul class="drop-down-menu__list">
+            <li ng-repeat="colour in search.colours.values">
+              <label for="colour_{{ colour.code }}">
+                <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox">
+
+                {{ colour.name }} ({{ colour.count }})
+              </label>
+            </li>
+          </ul>
+
+          <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main filters__apply">Apply</button>
         </div>
-
-        <ul class="drop-down-menu__list">
-          <li ng-repeat="colour in search.colours.values">
-            <label for="colour_{{ colour.code }}">
-              <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox">
-
-              {{ colour.name }} ({{ colour.count }})
-            </label>
-          </li>
-        </ul>
-
-        <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main filters__apply">Apply</button>
       </li>
 
       <!-- Size -->
       <li ng-if="filterIsAvailable('size')">
-        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('size', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.sizes.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
         </button>
 
-        <div class="drop-down-menu__banner">
-          <div class="drop-down-menu__hdr">
-            <em>{{ search.sizes.title }}</em>
-            <div ng-include src="'FilterItemBackButton'"></div>
+        <div ng-show="activeFilter === 'size'" class="filters__target">
+          <div class="drop-down-menu__banner">
+            <div class="drop-down-menu__hdr">
+              <em>{{ search.sizes.title }}</em>
+              <div ng-include src="'FilterItemBackButton'"></div>
+            </div>
           </div>
+
+          <ul class="drop-down-menu__list">
+            <li ng-repeat="size in search.sizes.values">
+              <label for="size_{{ size.code }}">
+                <input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
+
+                {{ size.name }} ({{ size.count }})
+              </label>
+            </li>
+          </ul>
+
+          <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main filters__apply">Apply</button>
         </div>
-
-        <ul class="drop-down-menu__list">
-          <li ng-repeat="size in search.sizes.values">
-            <label for="size_{{ size.code }}">
-              <input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
-
-              {{ size.name }} ({{ size.count }})
-            </label>
-          </li>
-        </ul>
-
-        <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main filters__apply">Apply</button>
       </li>
 
       <!-- Price -->
       <li ng-if="filterIsAvailable('price')">
-        <button class="drop-down-menu__hdr btn btn--full btn--pointer">
+        <button ng-click="toggleFilter('price', $event)" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
           {{ search.price.title }}
-          <span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
+          <span class="icon btn--pointer__icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
         </button>
 
-        <div class="filters__range">
+        <div ng-show="activeFilter === 'price'" class="filters__range filters__target">
           <div class="filters__banner drop-down-menu__banner">
             <div class="drop-down-menu__hdr">
               <em>{{ search.price.title }}</em>
@@ -211,10 +219,10 @@
 
       <!-- On sale -->
       <li>
-        <div class="drop-down-menu__hdr filters__sale">
+        <label for="sale-items" class="filters__trigger drop-down-menu__hdr filters__sale">
           <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items" type="checkbox">
-          <label for="sale-items">On sale</label>
-        </div>
+          <span>On sale</span>
+        </label>
       </li>
     </ul>
   </div>
