--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en">    <![endif]-->
 <!--[if gt IE 8]><!-->            <html class="no-js" lang="en">          	<!--<![endif]-->
 <head>
+	<base href="<%= request.path %>">
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 
